# ION-Screen-Capture

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
SCPI Screen Capture/: App.config  Form1.Designer.cs  Form1.cs  GlobalHotKey.cs  IP_Field.Designer.cs  IP_Field.cs  SCPI.csproj
SCPI Screen Capture/Properties/: Settings.Designer.cs  Settings.settings
SCPI Screen Capture/Scopes/: Oscilloscope.cs  Rigol1000.cs
SCPI Screen Capture/Telnet/: Telnet.cs
docs/: README.md  architecture.md  build-and-release.md  extending.md
src/: app.css  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/commands/: connection.rs  discovery.rs
src-tauri/src/discovery/: mdns.rs
src-tauri/src/transport/: block.rs
src/lib/components/: DeviceRail.svelte  Preview.svelte  ShortcutRecorder.svelte
src/lib/stores/: discovery.svelte.ts
src/lib/ui/: Dialog.svelte  Field.svelte
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/src/: error.rs  events.rs  hotkey.rs  lib.rs  main.rs  state.rs
src/src-tauri/src/commands/: capture.rs  connection.rs  mod.rs
src/src-tauri/src/discovery/: mdns.rs  mod.rs  probe.rs  sweep.rs  vxi11.rs
src/src-tauri/src/instrument/: idn.rs  mod.rs
src/src-tauri/src/transport/: mod.rs
src/svelte/: App.svelte  app.css  index.html  main.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/svelte/lib/: ipc.ts
src/svelte/lib/components/: CapturePanel.svelte  DeviceRail.svelte  (+5 more)
(+19 files in other folders)
